--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,7 +171,7 @@ FOREACH(f
   INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Configuration/Inputs/LanguageSupport" FILES "${f}")
 ENDFOREACH(f)
 
-INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/SWIG" FILES "ConfigurationInputs/itk.swg")
+INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/SWIG" FILES "itk.swg")
 
 INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}" FILES "${WrapITK_BINARY_DIR}/InstallOnly/WrapITKConfig.cmake")
 
