fix warnings while loading itk module
darcs-hash:20060127122139-2fc9d-0e1a20916dc077b46d7e1424270499f2cbdd95fa.gz

--- a/VXLNumerics/CMakeLists.txt
+++ b/VXLNumerics/CMakeLists.txt
@@ -1,5 +1,8 @@
 BEGIN_WRAPPER_LIBRARY("VXLNumerics")
 
+SET(WRAPPER_LIBRARY_GROUPS
+  vcl_complex
+) 
 # Set the required link libraries.
 # TODO: are these all the link libs needed? What about itkvcl?
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES itkvnl itkvnl_algo itknetlib itkvnl_inst)
