use CMAKE_CURRENT_SOURCE_DIR instead of hard coded path
darcs-hash:20060127165115-2fc9d-09e3016e0770708209b668c64e8676734fb79130.gz

--- a/ExternalProjects/ItkVtk/Wrapping/CMakeLists.txt
+++ b/ExternalProjects/ItkVtk/Wrapping/CMakeLists.txt
@@ -1,6 +1,6 @@
 FIND_PACKAGE(WrapITK REQUIRED)
 
-SET(WRAP_ITK_SWG_FILES ${ITK_SWG_FILES} "${ItkVtk_SOURCE_DIR}/Wrapping/itk.swg")
+SET(WRAP_ITK_SWG_FILES ${ITK_SWG_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/itk.swg")
 
 SET(WRAPPER_GCC_XML_INCLUDE_DIRS
   ${WRAPPER_GCC_XML_INCLUDE_DIRS}
