--- a/Python/itkConfig.py.in
+++ b/Python/itkConfig.py.in
@@ -15,3 +15,6 @@ test_root = '@CONFIG_WRAP_ITK_TEST_ROOT@'
 
 # location for test input
 data_root = '@CONFIG_WRAP_ITK_DATA_ROOT@'
+
+# location of doxygen-generated man pages
+doxygen_root = '@CONFIG_WRAP_ITK_DOXYGEN_ROOT@'
