enhance CMakeLists.txt (but still broken)
darcs-hash:20060128114949-2fc9d-7c1094635fd636d98979d1d68695fe7c473c2666.gz

--- a/ExternalProjects/ItkVtk/Wrapping/CMakeLists.txt
+++ b/ExternalProjects/ItkVtk/Wrapping/CMakeLists.txt
@@ -1,6 +1,6 @@
 FIND_PACKAGE(WrapITK REQUIRED)
 
-SET(WRAP_ITK_SWG_FILES ${ITK_SWG_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/itk.swg")
+# SET(WRAP_ITK_SWIG_LIBRARY_DIR ${WRAP_ITK_SWIG_LIBRARY_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/itk.swg")
 
 SET(WRAPPER_GCC_XML_INCLUDE_DIRS
   ${WRAPPER_GCC_XML_INCLUDE_DIRS}
@@ -11,12 +11,13 @@ SET(WRAPPER_GCC_XML_INCLUDE_DIRS
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
 
 BEGIN_WRAPPER_LIBRARY("ItkVtk")
-SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA)
+SET(WRAPPER_LIBRARY_AUTO_LOAD OFF) 
+SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA ITKBasicFiltersB)
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
 
 IF(ITK_CSWIG_PYTHON)
-#   TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPythonD)
+  TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPythonD)
 ENDIF(ITK_CSWIG_PYTHON)
 
