--- a/ExternalProjects/ItkVtk/Wrapping/CMakeLists.txt
+++ b/ExternalProjects/ItkVtk/Wrapping/CMakeLists.txt
@@ -1,6 +1,5 @@
 FIND_PACKAGE(WrapITK REQUIRED)
 
-# SET(WRAP_ITK_SWIG_LIBRARY_DIR ${WRAP_ITK_SWIG_LIBRARY_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/itk.swg")
 
 SET(WRAPPER_GCC_XML_INCLUDE_DIRS
   ${WRAPPER_GCC_XML_INCLUDE_DIRS}
@@ -11,6 +10,7 @@ SET(WRAPPER_GCC_XML_INCLUDE_DIRS
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
 
 BEGIN_WRAPPER_LIBRARY("ItkVtk")
+SET(WRAPPER_SWIG_LIBRARY_FILES ${WRAPPER_SWIG_LIBRARY_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/itkvtk.swg")
 SET(WRAPPER_LIBRARY_AUTO_LOAD OFF) 
 SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA ITKBasicFiltersB)
 
@@ -19,5 +19,6 @@ WRAPPER_LIBRARY_CREATE_LIBRARY()
 
 IF(ITK_CSWIG_PYTHON)
   TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPythonD)
+  INSTALL_FILES(${WRAP_ITK_INSTALL_LOCATION}/Python FILES "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
 ENDIF(ITK_CSWIG_PYTHON)
 
