also install typemaps.swg.in. External project can now be built without WrapITK build dir
darcs-hash:20060129115132-2fc9d-cb4bc15dd7e2b9c1b1a8c54931d06610d92abf79.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,7 +161,9 @@ FOREACH(f
  ConfigurationInputs/wrap_.cxx.in
  ConfigurationInputs/Master.mdx.in
  ConfigurationInputs/gcc_xml.inc.in
- ConfigurationInputs/empty.depend.in)
+ ConfigurationInputs/empty.depend.in
+ ConfigurationInputs/typemaps.swg.in
+ )
   INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Configuration/Inputs" FILES "${f}")
 ENDFOREACH(f)
 
