Install the ExternalProjectConfig file too.
darcs-hash:20060129231756-733a7-99cd8982440e83974ddd65ad4098beb68954352f.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,7 +169,8 @@ ENDFOREACH(f)
 
 FOREACH(f
  ConfigurationInputs/LanguageSupport/ModuleLoader.py.in
- ConfigurationInputs/LanguageSupport/ModuleConfig.py.in)
+ ConfigurationInputs/LanguageSupport/ModuleConfig.py.in
+ ConfigurationInputs/LanguageSupport/ExternalProjectConfig.py.in)
   INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Configuration/Inputs/LanguageSupport" FILES "${f}")
 ENDFOREACH(f)
 
