More changes to simplify
darcs-hash:20060203062625-733a7-3ff02b5c26ef2cfb827c95c0803bb84edb73a87c.gz

--- a/ExternalProjects/PyBuffer/CMakeLists.txt
+++ b/ExternalProjects/PyBuffer/CMakeLists.txt
@@ -4,9 +4,7 @@ FIND_PACKAGE(WrapITK REQUIRED)
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
 FIND_PACKAGE( NUMARRAY )
 
-INCLUDE_DIRECTORIES( ${PYTHON_NUMARRAY_INCLUDE_DIR} )
-SET(WRAPPER_GCC_XML_INCLUDE_DIRS ${WRAPPER_GCC_XML_INCLUDE_DIRS} ${PYTHON_NUMARRAY_INCLUDE_DIR})
-
+WRAP_ITK_INCLUDE_DIRECTORIES( ${PYTHON_NUMARRAY_INCLUDE_DIR} )
 
 BEGIN_WRAPPER_LIBRARY("BufferConversion")
 
