--- a/VXLNumerics/CMakeLists.txt
+++ b/VXLNumerics/CMakeLists.txt
@@ -4,7 +4,7 @@ SET(WRAPPER_LIBRARY_CABLESWIG_INPUTS
   "${CMAKE_CURRENT_SOURCE_DIR}/wrap_vcl_complex.cxx"
 ) 
 
-SET(WRAPPER_LIBRARY_LINK_LIBRARIES itkvnl)
+SET(WRAPPER_LIBRARY_LINK_LIBRARIES itkvnl itkvnl_inst)
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES() 
 WRAPPER_LIBRARY_CREATE_LIBRARY()
