--- a/ExternalProjects/PyBuffer/CMakeLists.txt
+++ b/ExternalProjects/PyBuffer/CMakeLists.txt
@@ -4,7 +4,7 @@ FIND_PACKAGE(WrapITK REQUIRED)
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
 FIND_PACKAGE( NUMARRAY )
 
-WRAP_ITK_INCLUDE_DIRECTORIES( ${PYTHON_NUMARRAY_INCLUDE_DIR} )
+INCLUDE_DIRECTORIES( ${PYTHON_NUMARRAY_INCLUDE_DIR} )
 
 BEGIN_WRAPPER_LIBRARY("BufferConversion")
 
