rename ItkVtk to avoid conflict between ItkVtk.py and itkvtk.py on non-case sensitive filesystems
darcs-hash:20060215150559-2fc9d-f14651fa50040990c65cf2a75a8ccefc5cd78845.gz

--- a/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
+++ b/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
@@ -1,6 +1,6 @@
 FIND_PACKAGE(WrapITK REQUIRED)
 
-BEGIN_WRAPPER_LIBRARY("ItkVtk")
+BEGIN_WRAPPER_LIBRARY(${PROJECT_NAME})
 SET(WRAPPER_SWIG_LIBRARY_FILES ${WRAPPER_SWIG_LIBRARY_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/itkvtk.swg")
 SET(WRAPPER_LIBRARY_AUTO_LOAD OFF) 
 SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA ITKBasicFiltersB)
