--- a/ConfigurationInputs/WrapITKConfig.cmake.in
+++ b/ConfigurationInputs/WrapITKConfig.cmake.in
@@ -37,7 +37,6 @@ ENDFOREACH(var)
 
 SET(WRAP_ITK_INSTALL_LOCATION "@WRAP_ITK_INSTALL_LOCATION@" CACHE STRING "Path to the top of the install tree (will be appended to CMAKE_INSTALL_PREFIX).")
 
-SET(WRAP_ITK_SWIG_LIBRARY_DIR "@CONFIG_SWIG_DIR@")
 SET(WRAP_ITK_CONFIG_DIR "@CONFIG_CONFIG_DIR@")
 SET(WRAP_ITK_CMAKE_DIR "@CONFIG_CMAKE_DIR@")
 IF(JAVA_OUTPUT_DIR)
@@ -49,6 +48,7 @@ ELSE(JAVA_OUTPUT_DIR)
   ENDIF(WRAP_ITK_JAVA)
 ENDIF(JAVA_OUTPUT_DIR)
 
+SET(WRAP_ITK_SWIG_LIBRARY_DIRECTORY "@CONFIG_WRAP_ITK_SWIG_LIBRARY_DIRECTORY@")
 SET(WRAP_ITK_MASTER_INDEX_DIRECTORY "@CONFIG_WRAP_ITK_MASTER_INDEX_DIRECTORY@")
 
 LINK_DIRECTORIES("@CONFIG_WRAP_ITK_SWIGRUNTIME_DIR@")
